src/objects/myAACR_Image__c.object
<CustomObject>
    <fields>
        <fullName>Header_Text__c</fullName>
        <label>Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Text__c</fullName>
        <label>Image Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>myAACR Image</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Image_URL__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>myAACR Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myAACR Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>